# crusty

./: .gitignore  CHANGELOG.md  CLAUDE.md  ENGINE_BOUNDARIES.md  PLAN.md  PLANS.md  PROCESS.md  PROGRESS.md  README.md  RENDERER_FUTURE.md  REVIEW.md  REVIEW_PLAN.md  VISION.md  build-site.sh  dev.sh  explained.md  gen2_battle_mechanics.json  struggles.md
engine/crates/engine-core/: Cargo.toml
engine/crates/engine-core/src/: aim_preview.rs  ambient_particles.rs  auto_juice.rs  behavior.rs  browser.rs  camera_director.rs  color_palette.rs  command_queue.rs  content_deck.rs  demo_ball.rs  density_field.rs  diagnostics.rs  dialogue.rs  engine.rs  entity_pool.rs  environment_clock.rs  event_bus.rs  events.rs  feel_preset.rs  flow_network.rs  frame_metrics.rs  game_flow.rs  game_state.rs  gesture.rs  input.rs  input_frame.rs  input_map.rs  level_curve.rs  lib.rs  log.rs  music_theory.rs  mycelia.rs  observation.rs  pathfinding.rs  persist.rs  policy.rs  procedural_gen.rs  raycast.rs  rng.rs  save_load.rs  (+17 more)
engine/crates/engine-core/src/chord_reps/: mod.rs  srs.rs  theory.rs
engine/crates/engine-core/src/components/: active.rs  behavior.rs  collider.rs  coroutine.rs  entity_flash.rs  force_field.rs  game_state.rs  ghost_trail.rs  graph_node.rs  hierarchy.rs  impulse.rs  launch_state.rs  lifetime.rs  mod.rs  motion_constraint.rs  physics_joint.rs  physics_material.rs  property_tween.rs  renderable.rs  resource_inventory.rs  rigidbody.rs  role.rs  signal.rs  sprite_animator.rs  state_machine.rs  tags.rs  (+5 more)
engine/crates/engine-core/tests/: determinism_fuzz.rs  golden_replay.rs
(+509 files in other folders)
