[package]
name = "engine-core"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["toml-presets"]
toml-presets = ["dep:toml"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console"] }
